# zntk_objdec

./: .gitignore  CMakeLists.txt
inc/: PracticalSocket.h  clock.h  detect_thread.h  object_detect.h  post_process.h  recv_thread.h  thread_manage.h  thread_queue.h  tic_toc.h  tictoc.h  utils.h
model/: yolov3.om
script/: deploy.sh  run.sh  update.sh  zntk_mkdir.service  zntk_objdec.service
src/: CMakeLists.txt  PracticalSocket.cpp  detect_thread.cpp  dvpp_jpegd.cpp  main.cpp  model_process.cpp  object_detect.cpp  post_process.cpp  recv_thread.cpp  thread_manage.cpp  utils.cpp
